--- a/nas_ports/freenas/py-freenas.cli/Makefile
+++ b/nas_ports/freenas/py-freenas.cli/Makefile
@@ -46,8 +46,8 @@ post-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/tools/cli ${STAGEDIR}${PREFIX}/bin/
 	${INSTALL_SCRIPT} ${WRKSRC}/tools/logincli ${STAGEDIR}${PREFIX}/bin/
 	${INSTALL_SCRIPT} -d ${STAGEDIR}${PREFIX}/www/cli
-	cp /var/tmp/cli.docs/* ${WRKSRC}/docgen/config/build_env/source/
-	make -C ${WRKSRC}/docgen/config/build_env/ html BUILDDIR=${STAGEDIR}${PREFIX}/www/cli
+	# cp /var/tmp/cli.docs/* ${WRKSRC}/docgen/config/build_env/source/
+	# make -C ${WRKSRC}/docgen/config/build_env/ html BUILDDIR=${STAGEDIR}${PREFIX}/www/cli
 	(cd ${STAGEDIR}${PREFIX}/www/cli; ${FIND} -E . -type f -regex \
 		".*((.pyc?)|(.so)|(.jso?n?)|(.html)|(.map)|(.css)|(.png)|(.jpg)|(.gif)|(.md)|(.txt)|(.swf)|(.eot)|(.svg)|(.ttf)|(.woff2?)|(.c))+$$" \
 		| ${SED} -e 's,^\./,,g' \
