Replace authorized-keys-helper Python script with a C program to reduce ssh connection delay.
Ticket: #22994
Ticket: #22865

--- a/nas_ports/freenas/freenas-dscached/Makefile
+++ b/nas_ports/freenas/freenas-dscached/Makefile
@@ -10,12 +10,16 @@ VALID_CATEGORIES+= freenas
 MAINTAINER=	dev@ixsystems.com
 COMMENT=	FreeNAS directory services daemon
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}more-itertools>0:${PORTSDIR}/devel/py-more-itertools \
+BUILD_DEPENDS=	libdispatcherclient>0:${PORTSDIR}/freenas/libdispatcherclient \
+		pkgconf>0:${PORTSDIR}/devel/pkgconf
+
+RUN_DEPENDS=	libdispatcherclient>0:${PORTSDIR}/freenas/libdispatcherclient \
+		${PYTHON_PKGNAMEPREFIX}more-itertools>0:${PORTSDIR}/devel/py-more-itertools \
 		${PYTHON_PKGNAMEPREFIX}ldap3>0:${PORTSDIR}/net/py-ldap3 \
 		${PYTHON_PKGNAMEPREFIX}gssapi>0:${PORTSDIR}/devel/py-gssapi \
 		${PYTHON_PKGNAMEPREFIX}ntplib>0:${PORTSDIR}/net/py-ntplib
 
-USES=		python
+USES=		python cmake:outsource
 USE_PYTHON=	py3kplist
 EXTRACT_ONLY=
 
@@ -23,15 +27,19 @@ NO_BUILD=	yes
 MAKE_JOBS_UNSAFE= yes
 ALL_TARGET=	obj all
 WRKSRC=		/usr/middleware_src/dscached
+CMAKE_SOURCE_PATH=${WRKSRC}/libexec/authorized-keys-helper
+CMAKE_INSTALL_PREFIX=${STAGEDIR}${PREFIX}
 
 checksum fetch:
 	${ECHO_CMD} ${.TARGET} not needed because building direct
 
 do-install:
 	${MAKE} -C ${WRKSRC} install PREFIX=${STAGEDIR}${PREFIX} PYTHON=${PYTHON_CMD}
+	${MAKE} -C ${CONFIGURE_WRKSRC} install
 
 post-install:
 	${PYTHON_CMD} -m compileall ${STAGEDIR}${PREFIX}/lib/dscached
+
 	(cd ${STAGEDIR}${PREFIX}/lib/dscached; ${FIND} -E . -type f -regex ".*.pyc?" \
 		| ${SED} -e 's,^\./,,g' \
 		| ${AWK} '{print length, $$0}' | ${SORT} -rn \
