Adjust the parameters to match reality of how the port actually installs the permissions on everything (or maybe our package system does; not sure yet).

--- a/nas_ports/net-mgmt/netdata/files/netdata.conf.sample.in
+++ b/nas_ports/net-mgmt/netdata/files/netdata.conf.sample.in
@@ -11,8 +11,14 @@
 [global]
 	# hostname = %%HOSTNAME%%
 	history = 86400
-	bind to = 127.0.0.1
+	bind to = 0.0.0.0
 	disconnect idle web clients after seconds = 3600
+	log directory = /var/tmp
+	cache directory = /var/tmp
+	lib directory = /var/db
+	home directory = /var/tmp
+	memory mode = ram
+	error log = syslog
 	# glibc malloc arena max for plugins = 1
 	# config directory = %%ETCDIR%%
 	# plugins directory = %%PREFIX%%/libexec/netdata/plugins.d
@@ -31,9 +37,9 @@
 	# memory mode = save
 	# update every = 1
 	# pthread stack size = 2097152
-	run as user = netdata
-	web files owner = netdata
-	web files group = netdata
+	run as user = root
+	web files owner = root
+	web files group = wheel
 	# http port listen backlog = 100
 	default port = 19999
 	# multi threaded web server = yes
