OK, make this actually install the config file this time (that's what I get for hand-editing the configuration file on the test host).
(cherry picked from commit dc6cc9742f229f2dffce4f1e3613c1740f6f9e84)

--- a/nas_ports/net-mgmt/netdata/Makefile
+++ b/nas_ports/net-mgmt/netdata/Makefile
@@ -38,7 +38,7 @@ PLIST_SUB+=	NETDATA_CACHE=${NETDATA_CACHE} \
 		NETDATA_PERST=${NETDATA_PERST}
 
 USE_RC_SUBR=	${PORTNAME}
-SUB_FILES=	${PORTNAME}.conf.sample
+SUB_FILES=	${PORTNAME}.conf
 
 USERS=		netdata
 GROUPS=		netdata
@@ -55,7 +55,7 @@ post-patch:
 
 post-install:
 	${MKDIR} ${STAGEDIR}${ETCDIR}
-	${INSTALL_DATA} ${WRKDIR}/netdata.conf.sample ${STAGEDIR}${ETCDIR}/netdata.conf.sample
+	${INSTALL_DATA} ${WRKDIR}/netdata.conf ${STAGEDIR}${ETCDIR}/netdata.conf
 	${MKDIR} ${STAGEDIR}${NETDATA_CACHE}
 	${MKDIR} ${STAGEDIR}${NETDATA_LOG}
 	${MKDIR} ${STAGEDIR}${NETDATA_PERST}
