I can't get the charts to load when run as netdata.  For now, this will have to do.
(cherry picked from commit a69f974e100167de94c00caaf5e8bf7195742440)

--- a/nas_ports/net-mgmt/netdata/files/netdata.conf.in
+++ b/nas_ports/net-mgmt/netdata/files/netdata.conf.in
@@ -39,7 +39,7 @@
 	# memory mode = save
 	# update every = 1
 	# pthread stack size = 2097152
-	run as user = netdata
+	run as user = root
 	web files owner = netdata
 	web files group = netdata
 	# http port listen backlog = 100
